--- a/app/src/main/res/layout/fragment_post_details.xml
+++ b/app/src/main/res/layout/fragment_post_details.xml
@@ -4,21 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:background="?attr/colorSurface"
+    android:transitionName="@string/new_post_transition">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
         style="@style/Widget.MaterialComponents.AppBarLayout.Surface">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fitsSystemWindows="true"
-            app:contentScrim="@color/design_default_color_primary_dark"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:contentScrim="?attr/colorBackgroundFloating"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
             <ImageView
                 android:id="@+id/postImage"
@@ -26,6 +25,7 @@
                 android:layout_height="200dp"
                 android:scaleType="centerCrop"
                 android:contentDescription="@string/post_image_description"
+                android:background="?attr/colorBackgroundFloating"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7"
                 tools:src="@tools:sample/backgrounds/scenic" />
@@ -36,7 +36,8 @@
                 android:layout_height="match_parent"
                 android:contentDescription="@string/pick_post_image_description"
                 android:src="@drawable/ic_round_add_a_photo_48"
-                style="@style/Widget.AppCompat.Button.Borderless"
+                android:padding="0dp"
+                android:background="?attr/selectableItemBackground"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7" />
 
@@ -49,12 +50,12 @@
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:paddingTop="28dp"
-        android:clipToPadding="false">
+        android:clipToPadding="false"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -65,8 +66,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:constraint_referenced_ids="kindImageButton,titleInputLayout,locationInputLayout,descriptionInputLayout"
-                app:flow_maxElementsWrap="2"
-                app:flow_horizontalGap="16dp"
+                app:flow_horizontalGap="8dp"
                 app:flow_verticalGap="16dp"
                 app:flow_wrapMode="chain"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -79,10 +79,10 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:padding="0dp"
+                android:background="?attr/selectableItemBackground"
                 android:contentDescription="@string/post_kind_image_button_description"
                 android:scaleType="centerInside"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                tools:src="@tools:sample/avatars" />
+                android:src="@drawable/ic_round_eco_24" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/titleInputLayout"
@@ -107,9 +107,11 @@
                 app:startIconDrawable="@drawable/ic_round_place_24">
 
                 <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                    android:id="@+id/locationEditText"
+                    android:id="@+id/locationAutoCompleteTextView"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:imeOptions="actionNext"
+                    android:inputType="textCapWords" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -126,7 +128,7 @@
                     android:inputType="textMultiLine|textCapSentences|textAutoCorrect" />
             </com.google.android.material.textfield.TextInputLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/newPostFab"
