--- a/app/src/main/res/layout/fragment_post_creation.xml
+++ b/app/src/main/res/layout/fragment_post_creation.xml
@@ -4,21 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:background="?attr/colorSurface">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        style="@style/Widget.MaterialComponents.AppBarLayout.Surface">
+        style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
+        app:liftOnScroll="true">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fitsSystemWindows="true"
-            app:contentScrim="@color/design_default_color_primary_dark"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:contentScrim="?attr/colorBackgroundFloating"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
             <ImageView
                 android:id="@+id/postImage"
@@ -36,7 +35,8 @@
                 android:layout_height="match_parent"
                 android:contentDescription="@string/pick_post_image_description"
                 android:src="@drawable/ic_round_add_a_photo_48"
-                style="@style/Widget.AppCompat.Button.Borderless"
+                android:padding="0dp"
+                android:background="?attr/selectableItemBackground"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7" />
 
@@ -45,16 +45,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:navigationIcon="@drawable/ic_round_close_24"
+                app:title="@string/create_post_screen_title"
                 app:layout_collapseMode="pin" />
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:paddingTop="28dp"
-        android:clipToPadding="false">
+        android:clipToPadding="false"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -64,9 +65,7 @@
             <androidx.constraintlayout.helper.widget.Flow
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:constraint_referenced_ids="kindImageButton,titleInputLayout,locationInputLayout,descriptionInputLayout"
-                app:flow_maxElementsWrap="2"
-                app:flow_horizontalGap="16dp"
+                app:constraint_referenced_ids="titleInputLayout,categoryKindFlow,severityFlow,locationInputLayout,descriptionInputLayout"
                 app:flow_verticalGap="16dp"
                 app:flow_wrapMode="chain"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -74,22 +73,13 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageButton
-                android:id="@+id/kindImageButton"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:padding="0dp"
-                android:contentDescription="@string/post_kind_image_button_description"
-                android:scaleType="centerInside"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                tools:src="@tools:sample/avatars" />
-
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/titleInputLayout"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/post_title_field_hint"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                app:startIconDrawable="@drawable/ic_round_title_24">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/titleEditText"
@@ -97,6 +87,82 @@
                     android:layout_height="wrap_content"
                     android:inputType="textCapSentences|textAutoCorrect" />
             </com.google.android.material.textfield.TextInputLayout>
+
+            <androidx.constraintlayout.helper.widget.Flow
+                android:id="@+id/categoryKindFlow"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:constraint_referenced_ids="categoryInputLayout,kindInputLayout"
+                app:flow_verticalGap="16dp"
+                app:flow_wrapMode="chain" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/categoryInputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/post_category_field_hint"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                app:startIconDrawable="@drawable/ic_round_category_24">
+
+                <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                    android:id="@+id/categoryAutoCompleteTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:imeOptions="actionNext"
+                    android:inputType="none" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/kindInputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/post_kind_field_hint"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                app:startIconDrawable="@drawable/ic_round_thumbs_up_down_24">
+
+                <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                    android:id="@+id/kindAutoCompleteTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:imeOptions="actionNext"
+                    android:inputType="none" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <androidx.constraintlayout.helper.widget.Flow
+                android:id="@+id/severityFlow"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:constraint_referenced_ids="severityTextView,lowSeverityImageView,severitySlider,highSeverityImageView"
+                app:flow_horizontalGap="8dp"
+                app:flow_verticalGap="8dp"
+                app:flow_wrapMode="chain" />
+
+            <TextView
+                android:id="@+id/severityTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/post_severity"
+                android:labelFor="@id/severitySlider" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/lowSeverityImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_round_nature_people_24" />
+
+            <com.google.android.material.slider.Slider
+                android:id="@+id/severitySlider"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:valueFrom="0"
+                android:valueTo="4"
+                android:stepSize="1" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/highSeverityImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_round_public_24" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/locationInputLayout"
@@ -107,9 +173,11 @@
                 app:startIconDrawable="@drawable/ic_round_place_24">
 
                 <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                    android:id="@+id/locationEditText"
+                    android:id="@+id/locationAutoCompleteTextView"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:imeOptions="actionNext"
+                    android:inputType="textCapWords" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -117,7 +185,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/post_description_field_hint"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                app:startIconDrawable="@drawable/ic_round_description_24">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/descriptionEditText"
@@ -126,7 +195,7 @@
                     android:inputType="textMultiLine|textCapSentences|textAutoCorrect" />
             </com.google.android.material.textfield.TextInputLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/newPostFab"
