--- a/app/src/main/res/menu/home_bottom_app_bar.xml
+++ b/app/src/main/res/menu/home_bottom_app_bar.xml
@@ -3,14 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/map"
-        android:icon="@drawable/ic_round_place_24"
-        android:title="@string/map_menu_item"
+        android:id="@+id/filter"
+        android:icon="@drawable/ic_round_filter_alt_24"
+        android:title="@string/filter_menu_item"
+        android:contentDescription="@string/filter_menu_item_description"
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/search"
-        android:icon="@drawable/ic_round_search_24"
-        android:title="@string/search_menu_item"
-        app:showAsAction="always" />
+        android:id="@+id/map"
+        android:icon="@drawable/ic_round_place_24"
+        android:title="@string/map_menu_item"
+        android:contentDescription="@string/map_menu_item_description"
+        app:showAsAction="ifRoom" />
 </menu>
